--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html lang="en" style="scroll-behavior: smooth;"><head>
 <title>Home Page | Chad Coin</title>
 <meta charset="utf-8">
@@ -808,3 +809,4 @@ AOS.init({
 
 
 </body></html>
+
