--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" style="scroll-behavior: smooth;"><head>
 <title>Home Page | Mobcoin</title>
 <meta charset="utf-8">
@@ -570,13 +571,13 @@ background: #C758BA;
 <p class="hero-description text-center" data-aos="fade" style="max-width:600px;z-index:2;position:relative;">Mobcoin is a hyper-deflationary, community-driven token on the Binance Smart Chain.</p>
 
 <div class="d-flex flex-column flex-sm-row mt-2 d-none">
-<a type="button" class="buy-button btn btn-primary m-2 " href="https://mm.finance/swap?outputCurrency=0xee8eef58d688f9b7ed5d6507b7023c4c80aed32b" target="_blank">Buy On MM.Finance</a>
-<a type="button" class="telegram-button btn btn-primary m-2" href="https://t.me/ChadOfficialCro" target="_blank">Join Our CRO Telegram</a>
+<a type="button" class="buy-button btn btn-primary m-2 " href="#" target="_blank">Buy On MM.Finance</a>
+<a type="button" class="telegram-button btn btn-primary m-2" href="#" target="_blank">Join Our CRO Telegram</a>
 </div>
 
 <div class="d-flex flex-column flex-sm-row mt-2">
-<a type="button" class="buy-button btn btn-primary m-2 " href="https://pancakeswap.finance/swap?inputCurrency=0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c&amp;outputCurrency=0xa701d2780b3eff268cad602e44bae728509225ec" target="_blank">Buy On Pancakeswap</a>
-<a type="button" class="telegram-button btn btn-primary m-2" href="https://t.me/ChadCoinOfficial" target="_blank">Join Our Telegram</a>
+<a type="button" class="buy-button btn btn-primary m-2 " href="#" target="_blank">Buy On Pancakeswap</a>
+<a type="button" class="telegram-button btn btn-primary m-2" href="#" target="_blank">Join Our Telegram</a>
 </div>
 
 </div>
@@ -749,17 +750,17 @@ background: #C758BA;
 <div class="row mt-4">
 <div class="col-12 d-flex flex-column justify-content-center align-items-center">
 <ul class="list-unstyled text-small text-center">
-<li class="d-none"><a class="text-decoration-none" href="https://t.me/ChadOfficialCro" target="_blank" rel="nofollow">CRO Telegram</a></li>
-<li class="d-none"><a class="text-decoration-none" href="https://dexscreener.com/cronos/0xbca3ead1162ef3500cadf9060d3c6e964ba26bb7" target="_blank" rel="nofollow">DEXScreener</a></li>
-<li class="d-none"><a class="text-decoration-none" href="https://mm.finance/swap?outputCurrency=0xee8eef58d688f9b7ed5d6507b7023c4c80aed32b" target="_blank" rel="nofollow">MM.Finance</a></li>
-<li><a class="text-decoration-none mb-1" href="https://t.me/ChadCoinOfficial" target="_blank" rel="nofollow">Telegram</a></li>
+<li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">CRO Telegram</a></li>
+<li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">DEXScreener</a></li>
+<li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">MM.Finance</a></li>
+<li><a class="text-decoration-none mb-1" href="#" target="_blank" rel="nofollow">Telegram</a></li>
 <li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Discord</a></li>
 <li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Reddit</a></li>
 <li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Instagram</a></li>
 <li class="d-none"><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Facebook</a></li>
-<li class=""><a class="text-decoration-none" href="https://twitter.com/chadcoinbsc/" target="_blank" rel="nofollow">Twitter</a></li>
-<li><a class="text-decoration-none" href="https://poocoin.app/tokens/0xa701d2780b3eff268cad602e44bae728509225ec" target="_blank" rel="nofollow">Poocoin</a></li>
-<li><a class="text-decoration-none" href="https://pancakeswap.finance/swap?inputCurrency=0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c&amp;outputCurrency=0xa701d2780b3eff268cad602e44bae728509225ec" target="_blank" rel="nofollow">Pancakeswap</a></li>
+<li class=""><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Twitter</a></li>
+<li><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Poocoin</a></li>
+<li><a class="text-decoration-none" href="#" target="_blank" rel="nofollow">Pancakeswap</a></li>
 </ul>
 </div>
 </div>
