--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <meta property="og:url" content="https://mobcoin.vip/">
 <meta property="og:type" content="website">
 <meta property="og:description" content="Mobcoin is a community-driven token deployed on the Binance Smart Chain through the BSC medium. It is community driven and backed by a strong team to deliver for investors with the goal of creating wealth and use case just by holding Mobcoin. To achieve this vision, a detailed roadmap is laid out and the liquidity is locked initially to grant investors confidence in this project.">
-<meta property="og:image" content="/images/url-preview-image.jpg">
+<meta property="og:image" content="/images/url-preview-image.png">
 <link rel="shortcut icon" type="image/png" href="/images/favicon.ico">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="840">
 <meta property="og:image:height" content="840">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:description" content="Mobcoin is a community-driven token deployed on the Binance Smart Chain through the BSC medium. It is community driven and backed by a strong team to deliver for investors with the goal of creating wealth and use case just by holding Mobcoin. To achieve this vision, a detailed roadmap is laid out and the liquidity is locked initially to grant investors confidence in this project.">
-<meta name="twitter:title" content="Chad Coin">
-<meta name="twitter:site" content="@chadcoinbsc">
+<meta name="twitter:title" content="Mobcoin">
+<meta name="twitter:site" content="@mobcoinbsc">
 <meta name="twitter:url" content="">
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
