--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="Mobcoin is a community-driven token deployed on the Binance Smart Chain through the BSC medium. It is community driven and backed by a strong team to deliver for investors with the goal of creating wealth and use case just by holding Mobcoin. To achieve this vision, a detailed roadmap is laid out and the liquidity is locked initially to grant investors confidence in this project.">
 <meta name="keywords" content="mobcoin,bitcoin,dogecoin,doge,defi,coinbase,coinmarketcap,coinmarket,bscscan,whitebit,coingecko,cryptocurrency,crypto,pancakeswap,dex,etherium,eth,btc">
 <meta property="og:title" content="Mobcoin">
-<meta property="og:url" content="https://mobcoin.vip/">
+<meta property="og:url" content="https://mobcoin.vip">
 <meta property="og:type" content="website">
 <meta property="og:description" content="Mobcoin is a community-driven token deployed on the Binance Smart Chain through the BSC medium. It is community driven and backed by a strong team to deliver for investors with the goal of creating wealth and use case just by holding Mobcoin. To achieve this vision, a detailed roadmap is laid out and the liquidity is locked initially to grant investors confidence in this project.">
 <meta property="og:image" content="/images/url-preview-image.png">
@@ -18,7 +18,7 @@
 <meta name="twitter:description" content="Mobcoin is a community-driven token deployed on the Binance Smart Chain through the BSC medium. It is community driven and backed by a strong team to deliver for investors with the goal of creating wealth and use case just by holding Mobcoin. To achieve this vision, a detailed roadmap is laid out and the liquidity is locked initially to grant investors confidence in this project.">
 <meta name="twitter:title" content="Mobcoin">
 <meta name="twitter:site" content="@mobcoinbsc">
-<meta name="twitter:url" content="">
+<meta name="twitter:url" content="https://mobcoin.vip">
 <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 <link href="css/uicons-regular-rounded.css" rel="stylesheet">
