--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <style type="text/css">
 
 body{
-background:#FFFFFF;
-color:#151515;
+background:#151515;
+color:#FFFFFF;
 font-family: 'Archivo', sans-serif;
 font-size:16px;
 font-weight: normal;
@@ -117,9 +117,9 @@ text-align: center !important;
 }
 
 .hero-container .buy-button{
-color: #FFFFFF;
-background-color: #151515;
-border-color: #151515;
+color: #151515;
+background-color: #FFFFFF;
+border-color: #FFFFFF;
 position: relative;
 z-index: 1;
 overflow: hidden;
@@ -135,9 +135,9 @@ font-size:1em;
 }
 
 .hero-container .telegram-button{
-color: #151515;
+color: #FFFFFF;
 background-color: transparent;
-border-color: #151515;
+border-color: #FFFFFF;
 position: relative;
 z-index: 1;
 overflow: hidden;
@@ -603,7 +603,7 @@ background: #C758BA;
 
 <div class="col-12 col-lg-4 mb-4" data-aos="fade">
 <div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto">
-<img class="img-fluid mb-4" src="images/community-driven-2.png" style="max-height:100px;">
+<img class="img-fluid mb-4" src="images/community-driven.png" style="max-height:100px;">
 <span class="tax-title-2 text-center mb-2">Community Driven</span><span class="tax-description text-center">Community focused and fair launched. The future of the project will depend on the community.</span>
 </div>
 </div>
@@ -611,12 +611,12 @@ background: #C758BA;
 
 <div class="col-12 col-lg-4 mb-4" data-aos="fade">
 <div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto">
-<img class="img-fluid mb-4" src="images/lp-lock-2.png" style="max-height:100px;">
+<img class="img-fluid mb-4" src="images/lp-lock.png" style="max-height:100px;">
 <span class="tax-title-2 text-center mb-2">Secured By Design</span><span class="tax-description text-center">Initial Liquidity Provided will be locked. This ensures that the project will not be rug-pulled.</span>
 </div>
 </div><div class="col-12 col-lg-4 mb-4" data-aos="fade">
 <div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto">
-<img class="p-1 img-fluid mb-4 " src="images/anti-whale-2.png" style="max-height:100px;">
+<img class="p-1 img-fluid mb-4 " src="images/anti-whale.png" style="max-height:100px;">
 <span class="tax-title-2 text-center mb-2">Safe and Whale-Proof</span><span class="tax-description text-center">Sells are restricted to less than 2% of the total supply to reduce swing-trading and break whales' control.</span>
 </div>
 </div>
@@ -678,20 +678,20 @@ background: #C758BA;
 <section id="roadmap" class="section roadmap-section">
 <div class="section-container roadmap-container container py-5" data-aos="fade">
 <div class="text-center">
-<h2 class="section-title roadmap-title mt-4" data-aos="fade" style="color:#FFFFFF">ROADMAP</h2>
+<h2 class="section-title roadmap-title mt-4" data-aos="fade" style="color:#151515">ROADMAP</h2>
 <div class="row mt-4 mb-4">
 <div class="col-12 col-lg-4 text-center py-3" data-aos="fade">
-<h4 style="color:#FFFFFF">PHASE 1</h4>
+<h4 style="color:#151515">PHASE 1</h4>
 <ul class="list-unstyled text-small text-center mt-3">
-<li>Telegram and Twitter Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FFFFFF" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
-<li>Initial Marketing Campaign<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FFFFFF" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
-<li>Pancakeswap Fair Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FFFFFF" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
-<li>LP Lock Extension<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FFFFFF" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
-<li>Website V1 Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#FFFFFF" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
+<li>Telegram and Twitter Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#151515" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
+<li>Initial Marketing Campaign<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#151515" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
+<li>Pancakeswap Fair Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#151515" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
+<li>LP Lock Extension<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#151515" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
+<li>Website V1 Launch<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#151515" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.25 8.891l-1.421-1.409-6.105 6.218-3.078-2.937-1.396 1.436 4.5 4.319 7.5-7.627z"></path></svg></li>
 </ul>
 </div>
 <div class="col-12 col-lg-4 text-center py-3" data-aos="fade">
-<h4 style="color:#FFFFFF">PHASE 2</h4>
+<h4 style="color:#151515">PHASE 2</h4>
 <ul class="list-unstyled text-small text-center mt-3">
 <li>Community Shilling</li>
 <li>Coin Listing Sites</li>
@@ -701,7 +701,7 @@ background: #C758BA;
 </ul>
 </div>
 <div class="col-12 col-lg-4 text-center py-3" data-aos="fade">
-<h4 style="color:#FFFFFF">PHASE 3</h4>
+<h4 style="color:#151515">PHASE 3</h4>
 <ul class="list-unstyled text-small text-center mt-3">
 <li>Merchandise Launch</li>
 <li>Staking Platform Launch</li>
