--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ font-weight:700;
 font-size:10em;;
 letter-spacing:0px;
     position:relative;
-color:#151515;
+color:#FFFFFF;
     font-family: 'PT Sans Narrow', sans-serif;
 }
 
@@ -137,11 +137,11 @@ font-size:1em;
 .hero-container .telegram-button{
 color: #FFFFFF;
 background-color: transparent;
-border-color: #FFFFFF;
+
 position: relative;
 z-index: 1;
 overflow: hidden;
-border: solid 1px #151515;
+border: solid 1px #FFFFFF;
 border-radius:1em;
 padding:16px 20px;
 font-weight:600;
@@ -178,11 +178,11 @@ font-family:'Archivo Narrow';
 /* ABOUT SECTION */
 
 .about-section{
-background:#151515;
+background:#FFFFFF;
 }
 
 .about-container{
-color:#ffffff;
+color:#151515;
 padding-bottom:0 !important;
 }
 
@@ -198,11 +198,11 @@ padding-bottom:0 !important;
 /* FEATURES SECTION */
 
 .features-section{
-background:#151515;
+background:#FFFFFF;
 }
 
 .features-container{
-color:#ffffff;
+color:#151515;
 padding-top:0 !important;
 }
 
@@ -213,10 +213,10 @@ padding-top:0 !important;
 }
 
 .features-container .tax-card{
- border:1px solid #FFFFFF;
+ border:1px solid #151515;
 border-radius:1em;
 max-width:480px;
-background:#FFFFFF;
+background:#151515;
 }
 
 .features-container .tax-title{
@@ -230,7 +230,7 @@ font-weight:700;
 }
     
 .features-container .tax-title-2{
-color: #151515;
+color: #FFFFFF;
 font-size: 1.5em;
 font-weight: 700;
 letter-spacing: 0;
@@ -240,7 +240,7 @@ line-height: 1;
 .features-container .tax-description{
 font-size:1em;
 font-weight:400;
-    color: #151515;
+    color: #FFFFFF;
 }
 
 /* ---------------- */
@@ -248,11 +248,11 @@ font-weight:400;
 /* TOKENOMICS SECTION */
 
 .tokenomics-section{
-background:#FFFFFF;
+background:#151515;
 }
 
 .tokenomics-container{
-color:#151515;
+color:#FFFFFF;
 }
 
 .tokenomics-container .tokenomics-title{
@@ -262,24 +262,24 @@ color:#151515;
 }
 
 .tokenomics-container .tax-card{
- border:1px solid #151515;
+ border:1px solid #FFFFFF;
 border-radius:1em;
 max-width:480px;
-background:#151515;
+background:#FFFFFF;
 }
 
 .tokenomics-container .tax-title{
-color: #FFFFFF;
+color: #151515;
 font-weight: 600;
 line-height: 0.85;
 -webkit-text-stroke-width: 0px;
--webkit-text-stroke-color: #151515;
+-webkit-text-stroke-color: #FFFFFF;
 font-size:5em;
 font-weight:700;
 }
     
 .tokenomics-container .tax-title-2{
-color: #FFFFFF;
+color: #151515;
 font-size: 1.5em;
 font-weight: 700;
 letter-spacing: 0;
@@ -289,19 +289,19 @@ line-height: 1;
 .tokenomics-container .tax-description{
 font-size:1em;
 font-weight:400;
-    color:#FFFFFF;
+    color:#151515;
 }
 
 
 .tokenomics-container .tokenomics-info-table td{
 	padding:1em 1em;
 	border:0px solid #ECF4FF;
-	color: #151515 !important;
+	color: #FFFFFF !important;
 background:transparent !important;
 }
 
 .tokenomics-container .tokenomics-info-table td span{
-	color: #151515 !important;
+	color: #FFFFFF !important;
 }
 
 .tokenomics-container .table{
@@ -310,7 +310,7 @@ background:transparent !important;
 	border:0px solid #71DFE6 !important;
 	background:transparent;
 	font-size:1em;
-        color: #151515 !important;
+        color: #FFFFFF !important;
 max-width:730px;
 }
 
@@ -327,11 +327,11 @@ max-width:730px;
 /* ROADMAP SECTION */ 
 
 .roadmap-section{
-background:#151515;
+background:#FFFFFF;
 }
 	
 .roadmap-container{
-color:#FFFFFF;
+color:#151515;
 }
 
 .roadmap-container ul > li{
@@ -541,8 +541,8 @@ background: #C758BA;
 <nav class="navbar navbar-expand-lg navbar-dark" id="#home">
 <div class="container" data-aos="fade">
 <a class="navbar-brand d-flex flex-row justify-content-center align-items-center" href="/">
-    <img class="img-fluid me-2" src="images/logo-with-text.png" width="40px">
-<h1 style="font-size:1.25em;font-weight:700;font-family:'PT Sans Narrow',sans-serif;" class="mb-0">Mobcoin</h1></a>
+    <img class="img-fluid me-2" src="images/logo-with-text.png" width="40px" style="filter:invert(100%)">
+<h1 style="font-size:1.25em;font-weight:700;font-family:'PT Sans Narrow',sans-serif;color:#FFFFFF" class="mb-0">Mobcoin</h1></a>
 <button id="navToggler" class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 <div class="navbar-collapse collapse" id="navbarTogglerDemo02" style="">
 <ul class="navbar-nav ms-auto pt-2 pt-lg-0">
