--- a/index.html
+++ b/index.html
@@ -654,17 +654,24 @@ background: #C758BA;
 </div>
 <div class="row mb-4">
 
-<div class="col-12 col-lg-4 mb-4 ms-auto">
+<div class="col-12 col-lg-4 mb-4">
 <div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto" data-aos="fade">
 <span class="tax-title text-center mb-4">1%</span>
 <span class="tax-title-2 text-center mb-2">Liquidity Pool</span><span class="tax-description text-center">1% of every transaction is transformed into liquidity. It's automatic and helps create a price floor.</span>
 </div>
 </div>
 
-<div class="col-12 col-lg-4 mb-4 me-auto">
+<div class="col-12 col-lg-4 mb-4">
 <div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto" data-aos="fade">
 <span class="tax-title text-center mb-4">2%</span>
 <span class="tax-title-2 text-center mb-2">Marketing</span><span class="tax-description text-center">2% of every transaction is taken and will be used for enhancements, operations, and marketing of the project.</span>
+</div>
+</div>
+	
+	<div class="col-12 col-lg-4 mb-4">
+<div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto" data-aos="fade">
+<span class="tax-title text-center mb-4">2%</span>
+<span class="tax-title-2 text-center mb-2">Charity</span><span class="tax-description text-center">2% of every transaction is taken and will be donated to a charity organization supported by the project.</span>
 </div>
 </div>
 
