--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@ background: #C758BA;
 	<div class="col-12 col-lg-4 mb-4">
 <div class="tax-card h-100 d-flex flex-column justify-content-center align-items-center px-4 py-5 mx-auto" data-aos="fade">
 <span class="tax-title text-center mb-4">2%</span>
-<span class="tax-title-2 text-center mb-2">Charity</span><span class="tax-description text-center">2% of every transaction is taken and will be donated to a charity organization supported by the project.</span>
+<span class="tax-title-2 text-center mb-2">Charity</span><span class="tax-description text-center">2% of every transaction is taken and will be donated to a charity organization supported by the team.</span>
 </div>
 </div>
 
